Version next
------------

  change
   - removed afb-wsapi files (from libafb and libafbcli)

Version 5.1.0
-------------

  fixes
   - unsubscription of wsapi and rpcapi server side (the unsubscription had
     no effect)

  change
   - remove references to json-locator
   - removed functions 'afb_sched_call_sync' and 'afb_sched_call_job_sync'
   - deprecation of function 'afb_sched_enter' replaced by 'afb_sched_sync'

Version 5.0.13
--------------

  fixes
   - compiling without systemd
   - explicit initialisation of event loop
   - releasing of the event loop as soon as possible
   - improve holding the event loop by threads
   - eventually start a thread for holding the event loop
     (but limited by the count of threads)

  features
   - adaptation to musl C library

  change
   - minor improvement of the signature of callback afb_threads_job_getter_t
   - management of event loop moved from afb-sched to afb-ev-mgr
   - improvements of afb-ev-mgr

Version 5.0.12
--------------

  features
   - Provide merged configuration object to apis

  fixes
   - Fix autostart of required API when auto-api is used
   - Fix URL in pc files

Version 5.0.11
--------------

  features
   - Upgrading to RPC v3 (#6052)
   - Upgrading to RPC v3 / WebSocket (#6052)
   - Rewrite of afb-api-rpc for using afb-wrap-rpc
   - Add support of ev_timer_modify_period (#6108)

  fixes
   - Sequence events on their identity not globally (#6110)
   - Missing API message (#6105)
   - Default anonymous root API names (#6106, #6111)
   - Tracing of requests, calls, events (#6107)
   - Report unsupported bindings (#6115)
   - Long pause time on corrupted heap backtrace

  change
   - Websockets now daughters of upgrade
   - Removed function afb_hswitch_websocket_switch
     replaced by afb_hswitch_upgrade
   - Removed DBUS transparency of API
   - Removed support of RPCv2
   - Manage timers in nanoseconds internally

  minor/details
   - Avoid a second call to sigsetjmp on signal